--- a/index.html
+++ b/index.html
@@ -1,225 +1,40 @@
-<div id="app">
-  <h2>Sticky Element: Scroll Down to See the Effect</h2>
-  <p>Scroll down this page to see how sticky positioning works.</p>
-  <div class="sticky">
-    I will stick to the screen when you reach my scroll position
-  </div>
+<html>
+  <head>
+    <style>
+      body {
+  margin:0;
+  min-height:200vh;
+  border:2px solid;
+}
+.first {
+  height:50px;
+  background:red;
+  position:sticky;
+  top:0;
+}
 
-  <p>Some example text..</p>
-  <h2>Scroll back up again to "remove" the sticky position.</h2>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-    imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-    scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-    Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-    convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-    dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-    nibh tempor porta. Cras ac leo purus. Mauris quis diam velit. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et
-    dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula
-    venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
-    massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-    facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus
-    interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-    ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet
-    sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer
-    fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-    Cras ac leo purus. Mauris quis diam velit. Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum,
-    nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor.
-    Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce
-    luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare
-    eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit
-    risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac.
-    In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui
-    eget tellus gravida venenatis. Integer fringilla congue eros non fermentum.
-    Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-    velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-    imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-    scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-    Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-    convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-    dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-    nibh tempor porta. Cras ac leo purus. Mauris quis diam velit. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et
-    dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula
-    venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
-    massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-    facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus
-    interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-    ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet
-    sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer
-    fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-    Cras ac leo purus. Mauris quis diam velit. Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum,
-    nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor.
-    Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce
-    luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare
-    eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit
-    risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac.
-    In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui
-    eget tellus gravida venenatis. Integer fringilla congue eros non fermentum.
-    Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-    velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-    imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-    scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-    Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-    convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-    dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-    nibh tempor porta. Cras ac leo purus. Mauris quis diam velit. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et
-    dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula
-    venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
-    massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-    facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus
-    interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-    ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet
-    sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer
-    fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-    Cras ac leo purus. Mauris quis diam velit. Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum,
-    nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor.
-    Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce
-    luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare
-    eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit
-    risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac.
-    In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui
-    eget tellus gravida venenatis. Integer fringilla congue eros non fermentum.
-    Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-    velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-    imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-    scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-    Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-    convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-    dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-    nibh tempor porta. Cras ac leo purus. Mauris quis diam velit. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et
-    dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula
-    venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
-    massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-    facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus
-    interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-    ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet
-    sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer
-    fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-    Cras ac leo purus. Mauris quis diam velit. Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum,
-    nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor.
-    Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce
-    luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare
-    eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit
-    risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac.
-    In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui
-    eget tellus gravida venenatis. Integer fringilla congue eros non fermentum.
-    Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-    velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-    imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-    scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-    Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-    convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-    dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-    nibh tempor porta. Cras ac leo purus. Mauris quis diam velit. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et
-    dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula
-    venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
-    massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-    facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus
-    interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-    ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet
-    sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer
-    fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-    Cras ac leo purus. Mauris quis diam velit.Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum,
-    nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor.
-    Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce
-    luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare
-    eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit
-    risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac.
-    In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui
-    eget tellus gravida venenatis. Integer fringilla congue eros non fermentum.
-    Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-    velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-    imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-    scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-    Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-    convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-    dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-    nibh tempor porta. Cras ac leo purus. Mauris quis diam velit. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et
-    dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula
-    venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
-    massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-    facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus
-    interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-    ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet
-    sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer
-    fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-    Cras ac leo purus. Mauris quis diam velit. Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum,
-    nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor.
-    Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce
-    luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare
-    eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit
-    risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac.
-    In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui
-    eget tellus gravida venenatis. Integer fringilla congue eros non fermentum.
-    Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-    velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-    imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-    scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-    Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-    convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-    dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-    nibh tempor porta. Cras ac leo purus. Mauris quis diam velit. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et
-    dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula
-    venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
-    massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula,
-    facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus
-    interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed
-    ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet
-    sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer
-    fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-    Cras ac leo purus. Mauris quis diam velit. Lorem ipsum dolor sit amet,
-    consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum,
-    nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor.
-    Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce
-    luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare
-    eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit
-    risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac.
-    In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui
-    eget tellus gravida venenatis. Integer fringilla congue eros non fermentum.
-    Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam
-    velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-    imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae
-    scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
-    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet.
-    Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent
-    convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis
-    dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
-    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar
-    nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
-  </p>
-</div>
+.second {
+  height:50px;
+  background:blue;
+  position:sticky;
+  top:52px;
+}
+.third {
+  height:50px;
+  background:green;
+  position:sticky;
+  top:104px;
+}
+</style>
+  </head>
+  <body>
+    <div class="first"></div>
+<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+<div class="second"></div>
+<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+<div class="third"></div>
+<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+
+  </body>
+
+</html>
